--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ p.art-text{
     background-position: center center;
 }
 
-.card{
+/* .card{
     z-index: -2;
 }
 .carousel-inner{
@@ -79,7 +79,7 @@ p.art-text{
     z-index: -2;
 }
 .carousel-control-next-icon{
-    z-index: -2;
+    z-index: -2; */
 }
 
 
